# hololive-schedule-cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  formatter.rs  holoapi_wrapper.rs  lib.rs  main.rs  schedule_dot_hololive_scraper.rs
