[package]
name = "holo-schedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "1.0.137", features = ["derive"]}
unicode-width = "0.1.5"
ansi_term = "0.12.1"
chrono = "0.4"
dirs = "4.0"
toml = "0.5.9"
holodex = { git = "https://github.com/Yi-Jiahe/holodex-rs" }